--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "@types/react": "^17.0.40",
     "react": "^17.0.2",
+    "rollup": "^2.70.0",
     "typescript": "^4.6.2"
   }
 }
