--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/react": "^17.0.40",
     "babel-loader": "^8.2.3",
     "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "rollup": "^2.70.0",
     "rollup-plugin-dts": "^4.2.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
