--- a/package.json
+++ b/package.json
@@ -33,5 +33,7 @@
     "tslib": "^2.3.1",
     "typescript": "^4.6.2"
   },
-  "dependencies": {}
+  "dependencies": {
+    "styled-components": "^5.3.3"
+  }
 }
